구글 애널리틱스 추가

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Seoul
 
 favicon: /assets/img/favicon.ico
 
-google_analytics: #UA—XXXXXXXX-X
+google_analytics: G-Z7Z2KPLFYC #UA—XXXXXXXX-X
 disqus_shortname: hyunwoox #disqus shortname
 
 user:
